cluster/apps/default/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name radarr
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: *name
          image: ghcr.io/k8s-at-home/radarr:v4.1.0.6175
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 250Mi
            limits:
              cpu: 300m
              memory: 500Mi
          ports:
            - name: &port http
              protocol: TCP
              containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-media
              mountPath: /movies
              subPath: Movies
            - name: radarr-downloads
              mountPath: /downloads
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: radarr-media
          persistentVolumeClaim:
            claimName: shared-media
        - name: radarr-downloads
          persistentVolumeClaim:
            claimName: shared-downloads
