cluster/apps/default/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - name: http
      protocol: TCP
      port: 7878
      targetPort: http
  type: ClusterIP
